<resources>
    <string name="app_name">Movies</string>
    <string name="title_home">Movies</string>
    <string name="empty_list_genre">No hay géneros en este momento</string>
    <string name="empty_list_movies">No hay Peliculas para mostrar</string>
    <string name="error_list_genre">Hubo un error al cargar la lista</string>
    <string name="about_the_movie">Overview</string>
    <string name="search_movie">Search Movie</string>
    <string name="search_movie_hint">Search your favorite movie\nby typing in the box</string>
    <string name="producer">Producer</string>
    <string name="as">As</string>
    <string name="cast">Cast</string>
    <string name="rate_default">0.0</string>
    <string name="sort_by">Ordenar por:</string>
    <string name="popularity">Popularidad descendente</string>
    <string name="release_date">Fecha de lanzamiento descendente</string>
    <string name="rating">Calificación descendente</string>
    <string name="Ok">Listo</string>

    <!--    SortMovies-->
    <string name="popularityAsc">popularity.asc</string>
    <string name="releaseDateAsc">release_date.asc</string>
    <string name="voteAverageAsc">vote_average.asc</string>
    <string name="popularityDesc">popularity.desc</string>
    <string name="releaseDateDesc">release_date.desc</string>
    <string name="voteAverageDesc">vote_average.desc</string>
    <string name="rate_zero">0.0</string>
    <string name="movie_search_title">Movie search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_movie_detail_v2">MovieDetailV2Activity</string>
</resources>
