<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/horizontal_activity_space"
    tools:context=".views.fragments.SortDialogFragment">

    <TextView
        android:id="@+id/textView4"
        style="@style/item_genre_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_activity_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="@string/popularityDesc"
            android:text="@string/popularity" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="@string/releaseDateDesc"
            android:text="@string/release_date" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="@string/voteAverageDesc"
            android:text="@string/rating" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_dialog_ok"
        style="@style/buttons"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_activity_space"
        android:text="@string/Ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>